Add css alignment to sign-up section
Position the heading, text, and button to the left. The image will go to
the right. Need to tweak margin and gap values.

--- a/style.css
+++ b/style.css
@@ -16,3 +16,13 @@
 #nav .nav-item a {
     text-decoration: none;
 }
+
+#sign-up {
+    display: flex;
+    gap: 48px;
+    margin: auto 128px;
+}
+
+#sign-up .right-side img {
+    width: 350px;
+}
