Tweak margins to improve header and sign-up section alignment

--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 #header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: auto 128px;
+    margin: auto 256px;
 }
 
 #nav {
@@ -11,6 +17,7 @@
     flex-direction: row;
     gap: 16px;
     list-style: none;
+    margin-left: auto;
 }
 
 #nav .nav-item a {
@@ -19,10 +26,12 @@
 
 #sign-up {
     display: flex;
-    gap: 48px;
-    margin: auto 128px;
+    gap: 64px;
+    justify-content: space-between;
+    margin: auto 256px;
+    margin-top: 64px;
 }
 
 #sign-up .right-side img {
-    width: 350px;
+    width: 300px;
 }
