Add css alignment to info section
Add some css alignment to the info section so that we have a heading and
below it 4 images with their respective subtext captions. Also, add a
placeholder images so something shows up on the screen that we can work
with.

--- a/style.css
+++ b/style.css
@@ -35,3 +35,24 @@ body {
 #sign-up .right-side img {
     width: 300px;
 }
+
+#info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 16px;
+}
+
+#info-figures {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100px;
+    gap: 32px;
+    margin-top: 16px;
+}
+
+.info-figure img {
+    width: 150px;
+}
